Structuring the performance subsection, first draft of discussion section.

--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -348,3 +348,70 @@ language={English}
   year={2004},
   publisher={IEEE}
 }
+
+@inproceedings{MerrellFurnitureLayout,
+ author = {Merrell, Paul and Schkufza, Eric and Li, Zeyang and Agrawala, Maneesh and Koltun, Vladlen},
+ title = {Interactive furniture layout using interior design guidelines},
+ booktitle = {ACM SIGGRAPH 2011 papers},
+ series = {SIGGRAPH '11},
+ year = {2011},
+ isbn = {978-1-4503-0943-1},
+ location = {Vancouver, British Columbia, Canada},
+ pages = {87:1--87:10},
+ articleno = {87},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1964921.1964982},
+ doi = {10.1145/1964921.1964982},
+ acmid = {1964982},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {furniture arrangement, interaction, interior design, layout interfaces},
+} 
+
+@inproceedings{HamiltonianMCMC,
+  title={MCMC using Hamiltonian dynamics},
+  author={Neal, R. M.},
+  booktitle={Handbook of Markov Chain Monte-Carlo (Steve Brooks, Andrew Gelman, Gailin Jones and Xiao-Li Meng, Eds.},
+  year={2010}
+}
+
+@inproceedings{AutoDiff,
+  title={Nonstandard Interpretations of Probabilistic Programs for Efficient Inference},
+  author={David Wingate and Noah D. Goodman and Andreas Stuhlmüller and Jeffrey M. Siskind},
+  booktitle={Neural Information Processing Systems},
+  year={2011}
+}
+
+@article{SketchClassification,
+author={Eitz, Mathias and Hays, James and Alexa, Marc},
+title={How Do Humans Sketch Objects?},
+journal={ACM Trans. Graph. (Proc. SIGGRAPH)},
+year={2012},
+volume={31},
+number={4},
+pages = {44:1--44:10}
+}
+
+@article{ReversibleJumpMCMC,
+author = {Green, Peter J.}, 
+title = {Reversible jump Markov chain Monte Carlo computation and Bayesian model determination},
+volume = {82}, 
+number = {4}, 
+pages = {711-732}, 
+year = {1995}, 
+doi = {10.1093/biomet/82.4.711}, 
+abstract ={Markov chain Monte Carlo methods for Bayesian computation have until recently been restricted to problems where the joint distribution of all variables has a density with respect to some fixed standard underlying measure. They have therefore not been available for application to Bayesian model determination, where the dimensionality of the parameter vector is typically not fixed. This paper proposes a new framework for the construction of reversible Markov chain samplers that jump between parameter subspaces of differing dimensionality, which is flexible and entirely constructive. It should therefore have wide applicability in model determination problems. The methodology is illustrated with applications to multiple change-point analysis in one and two dimensions, and to a Bayesian comparison of binomial experiments.}, 
+URL = {http://biomet.oxfordjournals.org/content/82/4/711.abstract}, 
+eprint = {http://biomet.oxfordjournals.org/content/82/4/711.full.pdf+html}, 
+journal = {Biometrika} 
+}
+
+@inproceedings{SharonPaletteExtraction,
+ author = {Lin, Sharon and Hanrahan, Patrick},
+ title = {Modeling How People Extract Color Themes from Images},
+ booktitle = {Proc. of CHI 2013},
+ series = {CHI '13},
+ year = {2013},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
