Limitations figure, etc.

--- a/latex/siggraph2013/spatialcolor.tex
+++ b/latex/siggraph2013/spatialcolor.tex
@@ -112,7 +112,7 @@ Good color assignments to adjacent segments may depend on the nature of their ad
 \begin{figure}[ht]
 \centering
 \includegraphics[width=.7\columnwidth]{figs/surround}
-\caption{Color appearance depends on their relationships with surrounding regions\remark{Rough figure.}}
+\caption{Color appearance depends on relationships with surrounding regions\remark{Rough figure.}}
 \label{fig:surround}
 \end{figure}
 
