Minor typos. Temporarily commenting out remarks

--- a/latex/siggraph2013/macros.tex
+++ b/latex/siggraph2013/macros.tex
@@ -1,7 +1,7 @@
 
 %% For adding comments to the text
-\newcommand{\remark}[1]{\textcolor{red}{[#1]}}
-%\newcommand{\remark}[1]{}
+%\newcommand{\remark}[1]{\textcolor{red}{[#1]}}
+\newcommand{\remark}[1]{}
 
 %% Units of measurement
 \newcommand{\unit}[1]{\ensuremath{\,\mathrm{#1}}}
