--- a/latex/siggraph2013/spatialcolor.tex
+++ b/latex/siggraph2013/spatialcolor.tex
@@ -159,7 +159,7 @@ We discretize the space of property values using K-means clustering on the value
 \begin{tabular}{cc}
 \raisebox{10em}{\includegraphics[width=.22\columnwidth]{figs/histogramImage}}&\includegraphics[width=.7\columnwidth]{figs/histograms}\vspace{0.5em}\\
 \end{tabular}
-\caption{Predicted histograms over lightness (left) for the background region of a pattern template (right). The region is highlighted in orange. The top histogram shows the discrete probability distribution over lightness bins (K=7), outputted by our regressors. The bottom histogram shows the probability density over lightness values after smoothing the discrete distribution.}
+\caption{Predicted histograms over lightness (right) for the background region of a pattern template (left). The region is highlighted in orange. The top histogram shows the discrete probability distribution over lightness bins (K=7), outputted by our regressors. The bottom histogram shows the probability density over lightness values after smoothing the discrete distribution.}
 \label{fig:histograms}
 \end{figure}
 
