New guided search figures.

--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -43,9 +43,9 @@ Unconstrained sampling&Constrained sampling\\
 
 \begin{figure}[ht]
 \begin{tabular}{cc}
-\raisebox{2em}{\includegraphics[width=.22\columnwidth]{figs/guidedSearch0Original}}&\includegraphics[width=.7\columnwidth]{figs/guidedSearch0MMR}\vspace{0.5em}\\
 \raisebox{2em}{\includegraphics[width=.22\columnwidth]{figs/guidedSearch1Original}}&\includegraphics[width=.7\columnwidth]{figs/guidedSearch1MMR}\vspace{0.5em}\\
-\raisebox{2em}{\includegraphics[width=.22\columnwidth]{figs/guidedSearch2Original}}&\includegraphics[width=.7\columnwidth]{figs/guidedSearch2MMR}\\
+\raisebox{2em}{\includegraphics[width=.22\columnwidth]{figs/guidedSearch0Original}}&\includegraphics[width=.7\columnwidth]{figs/guidedSearch0MMR}\vspace{0.5em}\\
+%\raisebox{2em}{\includegraphics[width=.22\columnwidth]{figs/guidedSearch2Original}}%&\includegraphics[width=.7\columnwidth]{figs/guidedSearch2MMR}\\
 Suggestion&Results\\
 \end{tabular}
 
