Work-in-progress web page recoloring stuff.

--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -24,7 +24,7 @@ The results shown below are rendered from the original vector pattern using the 
 \label{fig:permutation}
 \end{figure*}
 
-\paragraph{Coloring with fixed palettes} In some cases, an artist already knows what colors they want to use in an image. They might have found a palette they are enamored with elsewhere, or they might have a very specific theme in mind. Even with a fixed palette, there are still a range of images that can be created by mapping different colors to different regions, only some of which are desirable. To support this task, we use our model's score to rank all possible permutations of the colors. Figure~\ref{fig:permutation} shows one example of this process. \ref{fig:permutation}b shows the eight highest-rated color assignments which exhibit a variety of color styles, such as using four different background colors. On the other hand, the lowest-rated assignments all use the tangerine background color. Our color model assigns a very low score to using this color for the background region because its color properties are not similar to background colors in the training set. The actual color assignment originally provided by the artist for this color template received the second-highest score, suggesting that our model was able to capture the artist's intent.
+\paragraph{Coloring with fixed palettes} In some cases, an artist already knows what colors she wants to use in an image. She might have found a palette she is enamored with elsewhere or mayhave a very specific theme in mind. Even with a fixed palette, there are still a range of images that can be created by mapping different colors to different regions, only some of which are desirable. To support this task, we use our model's score to rank all possible permutations of the colors. Figure~\ref{fig:permutation} shows one example of this process. \ref{fig:permutation}b shows the eight highest-rated color assignments which exhibit a variety of color styles, such as using four different background colors. On the other hand, the lowest-rated assignments all use the tangerine background color. Our color model assigns a very low score to using this color for the background region because its color properties are not similar to background colors in the training set. The actual color assignment originally provided by the artist for this color template received the second-highest score, suggesting that our model was able to capture the artist's intent.
 
 \begin{figure*}[ht]
 \begin{tabular}{cc} 
@@ -32,14 +32,14 @@ The results shown below are rendered from the original vector pattern using the 
 Unconstrained sampling&Constrained sampling\\
 \end{tabular}
 
-\caption{An artist coloring a pattern is presented with the results shown on the left, and decides that she only likes results where the stem of the plant is dark green. On the right, we use conditional inference to sample from our model subject to the constraint that the desired palette entry is fixed to a specific color. This is a natural way to incorporate semantic information about region colors which cannot be easily learned by our model.}
+\caption{An artist coloring a pattern is presented with the results shown on the left, and decides that she only likes results where the stem of the plant is dark green. On the right, we use conditional inference to sample from our model subject to the constraint that the desired palette entry is fixed to a specific color. This is a natural way to incorporate semantic information about region colors which our model cannot capture.}
 \label{fig:constrainedInference}
 \vspace{-1.0em}
 \end{figure*}
 
-\remark{I realize that we may not keep in the hard or soft constraint figures and results, in favor of more ``interesting'' constraints; I'm still trying to find better examples of the hard and soft constraints though.}
+\paragraph{Hard color constraints}
 
-\paragraph{Hard color constraints} Often a user has some idea of what types of palettes they are interested in. When this idea takes the form of a hard constraint on a region color, it is straightforward to accommodate this by using constrained inference to sample from the factor graph. Figure~\ref{fig:constrainedInference} shows an example. The model samples from the highest-scoring patterns subject to the constraint that the plant stem must be a specific shade of green.
+A user coloring a pattern may be confident about the colors he wants to see in some regions but uncertain about others. Our model can assist users in this situation by fixing the color of certain pattern regions and using conditional inference to sample values for the remaining unconstrained color variables. Figure~\ref{fig:constrainedInference} shows an example, in which the model samples from the highest-scoring patterns subject to the constraint that the plant stem must be a specific shade of green.
 
 \begin{figure}[ht]
 \begin{tabular}{cc}
@@ -54,21 +54,22 @@ Suggestion&Results\\
 \vspace{-1.0em}
 \end{figure}
 
-\paragraph{Soft color constraints} When the user has only a general idea of what kind of palette they want, soft constraints can be incorporated by adding new factors. A simple constraint is that the color assigned to a region should be close to a target color, which we represent using a factor of the form:
-
+\paragraph{Soft color constraints}
+In another use case, a user might manually color a pattern and then wish to see variations upon this theme, hoping to find better-looking alternatives nearby in the space of colorings. Our model can support this type of query by incorporating an additional soft constraint factor on color variable, constraining it ot be close to a target color. Formally: 
+%%
 \begin{equation*}
 \factor(\colorVars_\group | \pattern) = \mathcal{N}(||\colorVars_\group - \textrm{targetColor}(\group)||, \sigma_\textrm{user})
 \end{equation*}
-
+%%
 Here, $\textrm{targetColor}(\group)$ is the desired color of group $\group$ and $\sigma_\textrm{user}$ controls the extent to which the group is allowed to deviate from the desired color. We assign this factor a weight $w_\textrm{user} * w_\textrm{model}$, where $w_\textrm{model}$ is the sum of the weights of all other factors in the model. $w_\textrm{user}$ controls the tradeoff between satisfying the user-specified target colors for a region versus satisfying the color distribution encoded by the trained model.
 
 This factor corresponds to adding a new term in our log-linear model with this statistics function:
-
+%%
 \begin{equation*}
 \termStats(\colors | \pattern) = \sum_{\group \in \groups}{\ln \mathcal{N}(||\colors_\group - \textrm{targetColor}(\group)||, \sigma_\textrm{user})}
 \end{equation*}
-
-Figure~\ref{fig:nearbySuggestions} shows examples where a proposed coloring is given, and the artist asks for colorings that are similar; this results in a new factor being added to each input color region. %\remark{Discussion on hold since the results will likely change}
+%%
+Figure~\ref{fig:nearbySuggestions} shows example scenarios where a proposed coloring is given, and the model returns similar colorings.%\remark{Discussion on hold since the results will likely change}
 
 \begin{figure}[ht]
 \begin{tabular}{ccc} 
@@ -96,21 +97,32 @@ Artist A&Artist B\\
 \label{fig:artistTraining}
 \end{figure*}
 
-\paragraph{Style capture} A powerful advantage of a data-driven approach is the ability to modify the underlying training source to achieve specialization of the resulting model. This allows us to capture a specific style and color preferences such as ``high-contrast palettes'' simply by selecting a set of images with the desired property. Figure~\ref{fig:styleTraining} demonstrates this using four style categories: \emph{Light}, \emph{Dark}, \emph{Bold}, and \emph{Mellow}. With only 17 training examples, our model is still able to capture general properties of the images such as the distribution of colors over the background regions in \emph{Light} and \emph{Dark}, and the amount of contrast between adjacent regions in \emph{Bold} and \emph{Mellow}. It is also easy to capture the style of a specific artist, as shown in Figure~\ref{fig:artistTraining}. Here, 100 images from each artist were used for training. The sampled images mimic certain properties of the the style of each artist, such as the light backgrounds preferred by artist A and the bold colors and dark backgrounds preferred by artist B.
+\paragraph{Style capture} A powerful advantage of a data-driven approach is the ability to modify the underlying training source to achieve specialization of the resulting model. This ability allows our model to capture a specific style and color preferences such as ``high-contrast patterns'' simply by selecting a set of patterns with the desired property. Figure~\ref{fig:styleTraining} demonstrates this behavior using four style categories: \emph{Light}, \emph{Dark}, \emph{Bold}, and \emph{Mellow}. With only 17 training examples, our model can still capture general properties of the example patterns such as the distribution of colors over the background regions in \emph{Light} and \emph{Dark} and the amount of contrast between regions in \emph{Bold} and \emph{Mellow}. The model can also capture the style of a specific artist, as shown in Figure~\ref{fig:artistTraining}. Here, 100 images from each artist were used for training. The sampled images mimic certain properties of the the style of each artist, such as the light backgrounds preferred by artist A and the bold colors and dark backgrounds preferred by artist B.
 
 \subsection{Applications}
 
 \paragraph{Web design}
+Our model can assist web designers by suggesting recolorings for web page pattern elements. In Figure~\ref{fig:webpageRecoloring}, the background pattern of a blog is recolored according to different seasons; the blog author could use a different coloring depending on the time of year. We generate these recolorings by adding two additional terms to the model. The first is a group smoothed histogram term over the colors that occur in the body of the web page. This histogram is generated by rendering the page and quantizing the resulting image to a small number of colors (20, in this example).~\remark{Equation?} Incorporating this term encourages each color group in the pattern to assume a color close to one in the web page. The second term is another group term that penalizes the pattern background (assumed to be the largest color group) for taking on a color too similar to the web page body background color.~\remark{Equation?} Incoporating this term ensures that the body of the page stands out from the background. A more sophisticated approach would consider the entire web page to be a pattern and perform joint recoloring; we leave this to future work.
+
+
+\begin{figure}
+\centering
+\includegraphics[width=\columnwidth]{figs/webpageRecoloring}
+\caption{Caption text! \emph{Source: \url{www.thedesigncubicle.com}}}
+\label{fig:webpageRecoloring}
+\end{figure}
 
 \paragraph{3D scene design}
 
-\subsection{Performance}
+%\remark{Leaving out performance for the time being.}
 
-\remark{Flesh this out with real data}
-We measured the performance of our prototype implementation using wall-clock time on a machine with X specs~\remark{Use Matt's machine?}.
-
-Table ? shows the time it takes to train the model for different numbers of training examples~\remark{Show it split into phases: cross-validation(?), regressor training, weight-tuning (we may want to try fewer iterations of weight-tuning w/ higher learning rate?}. Most of the time is taken up by X. Training amounts to a one-time-cost; once a model has been trained, it can suggest multiple colorings for many different patterns.
-
-The time required to generate coloring suggestions varies depending on the visual complexity of the pattern, but on average takes X time in our experiments. Time breaks down into: running parallel tempering, running MMR (we retrieve the top 20 samples using MMR $\lambda = 0.5$).
-
-There are many avenues for improving the performance of our unoptimized prototype. We could leverage the massive parallelism of graphics hardware to speed up parallel tempering, as was done in related work on automatic furniture layout~\cite{MerrellFurnitureLayout}. We could also improve the convergence of the individual MCMC chains via gradient-based proposals, as in Hamiltonian MCMC~\cite{HamiltonianMCMC}. Prior work has shown the feasibility of computing the gradients of programmatically-expressed distributions using automatic differentation~\cite{AutoDiff}. 
+%\subsection{Performance}
+%
+%\remark{Flesh this out with real data}
+%We measured the performance of our prototype implementation using wall-clock time on a machine with X specs~\remark{Use Matt's machine?}.
+%
+%Table ? shows the time it takes to train the model for different numbers of training examples~\remark{Show it split into phases: cross-validation(?), regressor training, weight-tuning (we may want to try fewer iterations of weight-tuning w/ higher learning rate?}. Most of the time is taken up by X. Training amounts to a one-time-cost; once a model has been trained, it can suggest multiple colorings for many different patterns.
+%
+%The time required to generate coloring suggestions varies depending on the visual complexity of the pattern, but on average takes X time in our experiments. Time breaks down into: running parallel tempering, running MMR (we retrieve the top 20 samples using MMR $\lambda = 0.5$).
+%
+%There are many avenues for improving the performance of our unoptimized prototype. We could leverage the massive parallelism of graphics hardware to speed up parallel tempering, as was done in related work on automatic furniture layout~\cite{MerrellFurnitureLayout}. We could also improve the convergence of the individual MCMC chains via gradient-based proposals, as in Hamiltonian MCMC~\cite{HamiltonianMCMC}. Prior work has shown the feasibility of computing the gradients of programmatically-expressed distributions using automatic differentation~\cite{AutoDiff}. 
