--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -416,7 +416,7 @@ journal = {Biometrika}
  address = {New York, NY, USA},
 }
 
-@article{YiTingTiledpatterns,
+@article{YiTingTiledPatterns,
   author={Yi-Ting Yeh and Katherine Breeden and Lingfeng Yang and Matthew Fisher and Pat Hanrahan },
   title={Synthesis of Tiled Patterns Using Factor Graphs},
   journal={ACM Transactions on Graphics},
